<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_player_names"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.activities.PlayerInputActivity">

    <EditText
        android:id="@+id/edit_text_player_name_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Oyuncu 1 Adı"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+ Oyuncu Ekle"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/button_proceed_to_topic_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Devam Et"
        android:enabled="false" />

</LinearLayout>
